--- a/.github/workflows/actions_workflow.yaml
+++ b/.github/workflows/actions_workflow.yaml
@@ -3,7 +3,10 @@ name: Actions CI/CD Pipeline trigger based on push changes to feature branches
 on:
   push:
     branches: 
-    - feature/**
+    - 'feature/**'
+
+env:
+  IMAGE_NAME: github-gists-api-svc:v1
 
 jobs:
   build-app: 
@@ -16,7 +19,7 @@ jobs:
       uses: actions/setup-python@v5
       with: 
         python-version: '3.13' 
-      cache: 'pip'
+        cache: 'pip'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
@@ -27,30 +30,37 @@ jobs:
         python -m pytest -v
 
   build-image-publish:
-      steps:
-      - name: Log in to the Container registry
-        uses: docker/login-action@v3
-        with: 
-          username: {{ secrets.DOCKER_USERNAME }}
-          password:  {{ secrets.DOCKERHUB_TOKEN }}
-  build-image-publish:
+    runs-on: ubuntu-latest
     steps:
     - name: Log in to the Container registry
       uses: docker/login-action@v3
       with: 
-        username: {{ secrets.DOCKER_USERNAME }}
-        password:  {{ secrets.DOCKERHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_USERNAME}}
+        password:  ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Setup Docker buildx
       uses:  docker/setup-buildx-action@v3
+
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v2
+
+    - name: Generate Tags for Docker image
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
 
     - name: Build & push to Docker Hub
       uses: docker/build-push-action@v6
       with: 
         context: .
         push: true
-        tags: {{ steps.meta.output.tags }}
-        labels: {{ steps.meta.output.labels }}
+        tags: ${{ steps.meta.outputs.tags }}
+        labels: ${{ steps.meta.outputs.labels }}
 
 
 
