--- a/.github/workflows/actions_workflow.yaml
+++ b/.github/workflows/actions_workflow.yaml
@@ -15,15 +15,24 @@ jobs:
     steps: 
     - name: Checkout repo into runners
       uses: actions/checkout@v4
+      
+    - name: Upload artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: repo-code
+        path: .
+
     - name: Setup Python 3
       uses: actions/setup-python@v5
       with: 
         python-version: '3.13' 
         cache: 'pip'
+
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip 
         pip install -r requirements.txt
+        
     - name: Run python tests using pytest
       run: |
         pip install pytest
@@ -31,7 +40,12 @@ jobs:
 
   build-image-publish:
     runs-on: ubuntu-latest
+    needs: build-app
     steps:
+    - name: Download artifact
+      uses: actions/download-artifact@v4
+      with:
+        name: repo-code 
     - name: Log in to the Container registry
       uses: docker/login-action@v3
       with: 
