--- a/.github/workflows/actions_workflow.yaml
+++ b/.github/workflows/actions_workflow.yaml
@@ -32,7 +32,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip 
         pip install -r requirements.txt
-        
+
     - name: Run python tests using pytest
       run: |
         pip install pytest
@@ -76,7 +76,7 @@ jobs:
       with: 
         context: .
         push: true
-        tags: ${{ env.IMAGE_NAME }}:${{ steps.sanitize-branch.outputs.clean_branch }}
+        tags: ${{ secrets.DOCKER_USERNAME}}/${{ env.IMAGE_NAME }}:${{ steps.sanitize-branch.outputs.clean_branch }}
         labels: ${{ steps.meta.outputs.labels }}
 
 
