--- a/.github/workflows/actions_workflow.yaml
+++ b/.github/workflows/actions_workflow.yaml
@@ -49,7 +49,7 @@ jobs:
     - name: Log in to the Container registry
       uses: docker/login-action@v3
       with: 
-        username: ${{ secrets.DOCKER_USERNAME}}
+        username: ${{ secrets.DOCKERHUB_USERNAME}}
         password:  ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Setup Docker buildx
@@ -62,7 +62,7 @@ jobs:
       id: meta
       uses: docker/metadata-action@v5
       with:
-        images: ${{ secrets.DOCKER_USERNAME }}/${{ env.IMAGE_NAME }}
+        images: ${{ secrets.DOCKERHUB_USERNAME }}/${{ env.IMAGE_NAME }}
         tags: type=ref,event=branch,enable=true,prefix=,suffix=,format=short
 
     - name: Sanitize branch name
@@ -76,8 +76,13 @@ jobs:
       with: 
         context: .
         push: true
-        tags: ${{ secrets.DOCKER_USERNAME}}/${{ env.IMAGE_NAME }}:${{ steps.sanitize-branch.outputs.clean_branch }}
+        tags: ${{ secrets.DOCKERHUB_USERNAME}}/${{ env.IMAGE_NAME }}:${{ steps.sanitize-branch.outputs.clean_branch }}
         labels: ${{ steps.meta.outputs.labels }}
+
+    - name: Verify Docker Hub Push
+      run: |
+        docker pull ${{ secrets.DOCKERHUB_USERNAME}}/${{ env.IMAGE_NAME }}:${{ steps.sanitize-branch.outputs.clean_branch }}
+        docker images
 
 
 
